--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <title>ohmyfood</title>
   </head>
   <body>
-    <header>
+    <div class="loader">
+      <div class="loader__spinner"></div>
+      <h1>homyfood ...</h1>
+    </div>
+    <header id="index">
       <div class="wrapper header-content">
         <img
           class="header-content__logo"
@@ -81,13 +85,13 @@
                 src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="photo d'un plât avec du poisson"
               />
+              <div class="card__news">Nouveau</div>
             </div>
             <div class="card__footer">
               <div class="description__container">
                 <h3>La palette du goût</h3>
                 <p>Ménilmontant</p>
               </div>
-              <i class="fa-regular fa-heart"></i>
             </div>
           </a>
           <a class="card" href="./la-palette-du-gout.html">
@@ -102,7 +106,6 @@
                 <h3>La note enchantée</h3>
                 <p>Charonne</p>
               </div>
-              <i class="fa-regular fa-heart card__like"></i>
             </div>
           </a>
           <a class="card" href="./la-palette-du-gout.html">
@@ -117,7 +120,6 @@
                 <h3>À la Française</h3>
                 <p>Cité Rouge</p>
               </div>
-              <i class="fa-regular fa-heart card__like"></i>
             </div>
           </a>
           <a class="card" href="./la-palette-du-gout.html">
@@ -132,7 +134,6 @@
                 <h3>Le délice des sens</h3>
                 <p>Folie-Méricourt</p>
               </div>
-              <i class="fa-regular fa-heart card__like"></i>
             </div>
           </a>
         </div>
