--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -41,89 +41,112 @@
       <section class="restaurant-menu">
         <div class="restaurant-menu__heading">
           <h1>La palette du goût</h1>
-          <!-- <i class="fa-regular fa-heart"></i> -->
         </div>
-        <h2 class="restaurant-menu__dish">Entrées</h2>
-        <ol class="restaurant-menu__list">
-          <li class="btn btn--dish">
-            <div class="dish__description">
-              <h3>Fricassée d'escargot</h3>
-              <p>Au pimet d'espelette</p>
-            </div>
-            <span class="dish__price">25€</span>
-            <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
-          </li>
-          <li class="btn btn--dish">
-            <div class="dish__description">
-              <h3>Foie gras de canard mi-cuit</h3>
-              <p>Et ses copaeaux de truffe noire</p>
-            </div>
-            <span class="dish__price">35€</span>
-            <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
-          </li>
-          <li class="btn btn--dish">
-            <div class="dish__description">
-              <h3>Oeuf au plat</h3>
-              <p>Assaisonné à la truffe sur lit de caviar</p>
-            </div>
-            <span class="dish__price">20€</span>
-            <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
-          </li>
-        </ol>
-        <h2 class="restaurant-menu__dish">Plats</h2>
-        <ol class="restaurant-menu__list">
-          <li class="btn btn--dish">
-            <div class="dish__description">
-              <h3>Filet de boeuf aux herbes</h3>
-              <p>Accompagné de sa ribambelle de légumes</p>
-            </div>
-            <span class="dish__price">40€</span>
-                        <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
-          </li>
-          <li class="btn btn--dish">
-            <div class="dish__description">
-              <h3>Parmentier de queue de boeuf</h3>
-              <p>À la truffe noire sur sa purée de panais</p>
-            </div>
-            <span class="dish__price">35€</span>
-                        <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
-          </li>
-          <li class="btn btn--dish">
-            <div class="dish__description">
-              <h3>Filet de turbot</h3>
-              <p>Aux agrumes</p>
-            </div>
-            <span class="dish__price">44€</span>
-                        <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
-          </li>
-        </ol>
-        <h2 class="restaurant-menu__dish">Desserts</h2>
-        <ol class="restaurant-menu__list">
-          <li class="btn btn--dish">
-            <div class="dish__description">
-              <h3>Paris-Brest</h3>
-              <p>Revisité</p>
-            </div>
-            <span class="dish__price">18€</span>
-                        <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
-          </li>
-          <li class="btn btn--dish">
-            <div class="dish__description">
-              <h3>Macaron au chocolat d'exception</h3>
-              <p>Et glace à la vanille de Madagascar</p>
-            </div>
-            <span class="dish__price">22€</span>
-                        <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
-          </li>
-          <li class="btn btn--dish">
-            <div class="dish__description">
-              <h3>Mousse au chocolat</h3>
-              <p>Au piment d'Espelette et à la truffe noire</p>
-            </div>
-            <span class="dish__price">23€</span>
-                        <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
-          </li>
-        </ol>
+        <div class="container-dish">
+          <h2 class="container-dish__dish">Entrées</h2>
+          <ol class="container-dish__list">
+            <li class="btn btn--dish">
+              <div class="dish__description">
+                <h3>Fricassée d'escargot</h3>
+                <p>Au pimet d'espelette</p>
+              </div>
+              <span class="dish__price">25€</span>
+              <div class="dish__confirm">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+            </li>
+            <li class="btn btn--dish">
+              <div class="dish__description">
+                <h3>Foie gras de canard mi-cuit</h3>
+                <p>Et ses copaeaux de truffe noire</p>
+              </div>
+              <span class="dish__price">35€</span>
+              <div class="dish__confirm">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+            </li>
+            <li class="btn btn--dish">
+              <div class="dish__description">
+                <h3>Oeuf au plat</h3>
+                <p>Assaisonné à la truffe sur lit de caviar</p>
+              </div>
+              <span class="dish__price">20€</span>
+              <div class="dish__confirm">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+            </li>
+          </ol>
+        </div>
+        <div class="container-dish">
+          <h2 class="container-dish__dish">Plats</h2>
+          <ol class="container-dish__list">
+            <li class="btn btn--dish">
+              <div class="dish__description">
+                <h3>Filet de boeuf aux herbes</h3>
+                <p>Accompagné de sa ribambelle de légumes</p>
+              </div>
+              <span class="dish__price">40€</span>
+              <div class="dish__confirm">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+            </li>
+            <li class="btn btn--dish">
+              <div class="dish__description">
+                <h3>Parmentier de queue de boeuf</h3>
+                <p>À la truffe noire sur sa purée de panais</p>
+              </div>
+              <span class="dish__price">35€</span>
+              <div class="dish__confirm">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+            </li>
+            <li class="btn btn--dish">
+              <div class="dish__description">
+                <h3>Filet de turbot</h3>
+                <p>Aux agrumes</p>
+              </div>
+              <span class="dish__price">44€</span>
+              <div class="dish__confirm">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+            </li>
+          </ol>
+        </div>
+        <div class="container-dish">
+          <h2 class="container-dish__dish">Desserts</h2>
+          <ol class="container-dish__list">
+            <li class="btn btn--dish">
+              <div class="dish__description">
+                <h3>Paris-Brest</h3>
+                <p>Revisité</p>
+              </div>
+              <span class="dish__price">18€</span>
+              <div class="dish__confirm">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+            </li>
+            <li class="btn btn--dish">
+              <div class="dish__description">
+                <h3>Macaron au chocolat d'exception</h3>
+                <p>Et glace à la vanille de Madagascar</p>
+              </div>
+              <span class="dish__price">22€</span>
+              <div class="dish__confirm">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+            </li>
+            <li class="btn btn--dish">
+              <div class="dish__description">
+                <h3>Mousse au chocolat</h3>
+                <p>Au piment d'Espelette et à la truffe noire</p>
+              </div>
+              <span class="dish__price">23€</span>
+              <div class="dish__confirm">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+            </li>
+          </ol>
+        </div>
         <div class="restaurant-menu__order">
           <button class="btn btn--order">Commander</button>
         </div>
