--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                 src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="photo d'un plat composé de poisson et de boulettes"
               />
+              <div class="card__news">Nouveau</div>
             </div>
             <div class="card__footer">
               <div class="description__container">
