--- a/index.html
+++ b/index.html
@@ -79,64 +79,88 @@
       <section class="restaurants">
         <h2 class="restaurants__heading">Restaurants</h2>
         <div class="restaurants__grid">
-          <a class="card" href="./la-palette-du-gout.html">
-            <div class="card__img">
-              <img
-                src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                alt="photo d'un plât avec du poisson"
-              />
-              <div class="card__news">Nouveau</div>
-            </div>
-            <div class="card__footer">
-              <div class="description__container">
-                <h3>La palette du goût</h3>
-                <p>Ménilmontant</p>
+          <div class="card">
+            <a href="./la-palette-du-gout.html">
+              <div class="card__img">
+                <img
+                  src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                  alt="photo d'un plât avec du poisson"
+                />
+                <div class="card__news">Nouveau</div>
               </div>
-            </div>
-          </a>
-          <a class="card" href="./la-palette-du-gout.html">
-            <div class="card__img">
-              <img
-                src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                alt="photo d'un plat composé de poisson et de boulettes"
-              />
-              <div class="card__news">Nouveau</div>
-            </div>
-            <div class="card__footer">
-              <div class="description__container">
-                <h3>La note enchantée</h3>
-                <p>Charonne</p>
+              <div class="card__footer">
+                <div class="description__container">
+                  <h3>La palette du goût</h3>
+                  <p>Ménilmontant</p>
+                </div>
               </div>
+            </a>
+            <div class="like">
+              <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
             </div>
-          </a>
-          <a class="card" href="./la-palette-du-gout.html">
-            <div class="card__img">
-              <img
-                src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                alt="photo d'un plât composé crème"
-              />
-            </div>
-            <div class="card__footer">
-              <div class="description__container">
-                <h3>À la Française</h3>
-                <p>Cité Rouge</p>
+          </div>
+          <div class="card">
+            <a class="card" href="./la-palette-du-gout.html">
+              <div class="card__img">
+                <img
+                  src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                  alt="photo d'un plat composé de poisson et de boulettes"
+                />
+                <div class="card__news">Nouveau</div>
               </div>
-            </div>
-          </a>
-          <a class="card" href="./la-palette-du-gout.html">
-            <div class="card__img">
-              <img
-                src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                alt="photo d'un plât avec du poisson"
-              />
-            </div>
-            <div class="card__footer">
-              <div class="description__container">
-                <h3>Le délice des sens</h3>
-                <p>Folie-Méricourt</p>
+              <div class="card__footer">
+                <div class="description__container">
+                  <h3>La note enchantée</h3>
+                  <p>Charonne</p>
+                </div>
               </div>
+            </a>
+            <div class="card__like">
+              <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
             </div>
-          </a>
+          </div>
+          <div class="card">
+            <a href="./la-palette-du-gout.html">
+              <div class="card__img">
+                <img
+                  src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                  alt="photo d'un plât composé crème"
+                />
+              </div>
+              <div class="card__footer">
+                <div class="description__container">
+                  <h3>À la Française</h3>
+                  <p>Cité Rouge</p>
+                </div>
+              </div>
+            </a>
+            <div class="card__like">
+              <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
+            </div>
+          </div>
+          <div class="card">
+            <a class="card" href="./la-palette-du-gout.html">
+              <div class="card__img">
+                <img
+                  src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                  alt="photo d'un plât avec du poisson"
+                />
+              </div>
+              <div class="card__footer">
+                <div class="description__container">
+                  <h3>Le délice des sens</h3>
+                  <p>Folie-Méricourt</p>
+                </div>
+              </div>
+            </a>
+            <div class="card__like">
+              <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
+            </div>
+          </div>
         </div>
       </section>
     </main>
