--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
           </div>
           <div class="card">
-            <a class="card" href="./la-palette-du-gout.html">
+            <a class="card" href="./la-note-enchantee.html">
               <div class="card__img">
                 <img
                   src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -122,7 +122,7 @@
             </div>
           </div>
           <div class="card">
-            <a href="./la-palette-du-gout.html">
+            <a href="./a-la-francaise.html">
               <div class="card__img">
                 <img
                   src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
@@ -142,7 +142,7 @@
             </div>
           </div>
           <div class="card">
-            <a class="card" href="./la-palette-du-gout.html">
+            <a class="card" href="./le-delice-des-sens.html">
               <div class="card__img">
                 <img
                   src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
