--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -15,7 +15,7 @@
       src="https://kit.fontawesome.com/3ae56bd447.js"
       crossorigin="anonymous"
     ></script>
-    <title>ohmyfood--La palette du goût--</title>
+    <title>ohmyfood--LA note enchantée--</title>
   </head>
   <body>
     <header>
@@ -34,20 +34,20 @@
       <section class="restaurant-intro">
         <img
           class="restaurant-intro__img"
-          src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+          src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
           alt=""
         />
       </section>
       <section class="restaurant-menu">
-        <h1 class="restaurant-menu__heading">La palette du goût</h1>
+        <h1 class="restaurant-menu__heading">La note enchantée</h1>
         <div class="restaurant-menu__container">
           <div class="container-dish">
             <h2 class="container-dish__dish">Entrées</h2>
             <ol class="container-dish__list">
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Fricassée d'escargot</h3>
-                  <p>Au pimet d'espelette</p>
+                  <h3>Ravioles de foie gras</h3>
+                  <p>Accompagnés de leur crème à la truffe</p>
                 </div>
                 <span class="dish__price">25€</span>
                 <div class="dish__confirm">
@@ -56,8 +56,8 @@
               </li>
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Foie gras de canard mi-cuit</h3>
-                  <p>Et ses copaeaux de truffe noire</p>
+                  <h3>Caviar osciètre </h3>
+                  <p>Sur blini à la farine de blé noir</p>
                 </div>
                 <span class="dish__price">35€</span>
                 <div class="dish__confirm">
@@ -66,10 +66,20 @@
               </li>
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Oeuf au plat</h3>
-                  <p>Assaisonné à la truffe sur lit de caviar</p>
+                  <h3>Homard et espuma de potiron</h3>
+                  <p>Mariné aux zestes d'orange</p>
                 </div>
                 <span class="dish__price">20€</span>
+                <div class="dish__confirm">
+                  <i class="fa-solid fa-circle-check"></i>
+                </div>
+              </li>
+              <li class="btn btn--dish">
+                <div class="dish__description">
+                  <h3>Foie gras de canard cuit entier</h3>
+                  <p>Confiture de figue et pain toasté</p>
+                </div>
+                <span class="dish__price">35€</span>
                 <div class="dish__confirm">
                   <i class="fa-solid fa-circle-check"></i>
                 </div>
@@ -81,8 +91,8 @@
             <ol class="container-dish__list">
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Filet de boeuf aux herbes</h3>
-                  <p>Accompagné de sa ribambelle de légumes</p>
+                  <h3>Noix de coquilles Saint-Jacques</h3>
+                  <p>Sur lit de purée de céleri-rave</p>
                 </div>
                 <span class="dish__price">40€</span>
                 <div class="dish__confirm">
@@ -91,8 +101,8 @@
               </li>
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Parmentier de queue de boeuf</h3>
-                  <p>À la truffe noire sur sa purée de panais</p>
+                  <h3>Langoustine poêlée</h3>
+                  <p>Purée de patate douce</p>
                 </div>
                 <span class="dish__price">35€</span>
                 <div class="dish__confirm">
@@ -101,8 +111,8 @@
               </li>
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Filet de turbot</h3>
-                  <p>Aux agrumes</p>
+                  <h3>Mijoté de queue de boeuf</h3>
+                  <p>Et riz sauvage aux zestes de citron</p>
                 </div>
                 <span class="dish__price">44€</span>
                 <div class="dish__confirm">
@@ -116,8 +126,8 @@
             <ol class="container-dish__list">
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Paris-Brest</h3>
-                  <p>Revisité</p>
+                  <h3>Macaron noisette et chocolat</h3>
+                  <p>Glace au caramel brun et sel de Guérande</p>
                 </div>
                 <span class="dish__price">18€</span>
                 <div class="dish__confirm">
@@ -126,8 +136,8 @@
               </li>
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Macaron au chocolat d'exception</h3>
-                  <p>Et glace à la vanille de Madagascar</p>
+                  <h3>Baba au rhum revisité</h3>
+                  <p>Avec son coulis de citron</p>
                 </div>
                 <span class="dish__price">22€</span>
                 <div class="dish__confirm">
@@ -136,8 +146,8 @@
               </li>
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Mousse au chocolat</h3>
-                  <p>Au piment d'Espelette et à la truffe noire</p>
+                  <h3>Tarte au citron meringuée</h3>
+                  <p>Déstructurée</p>
                 </div>
                 <span class="dish__price">23€</span>
                 <div class="dish__confirm">
