--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -15,7 +15,7 @@
       src="https://kit.fontawesome.com/3ae56bd447.js"
       crossorigin="anonymous"
     ></script>
-    <title>ohmyfood--La palette du goût--</title>
+    <title>ohmyfood--Le délice des sens--</title>
   </head>
   <body>
     <header>
@@ -34,20 +34,20 @@
       <section class="restaurant-intro">
         <img
           class="restaurant-intro__img"
-          src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+          src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
           alt=""
         />
       </section>
       <section class="restaurant-menu">
-        <h1 class="restaurant-menu__heading">La palette du goût</h1>
+        <h1 class="restaurant-menu__heading">Le délice des sens</h1>
         <div class="restaurant-menu__container">
           <div class="container-dish">
             <h2 class="container-dish__dish">Entrées</h2>
             <ol class="container-dish__list">
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Fricassée d'escargot</h3>
-                  <p>Au pimet d'espelette</p>
+                  <h3>Tartare de thon</h3>
+                  <p>Assaisonné au yuzu</p>
                 </div>
                 <span class="dish__price">25€</span>
                 <div class="dish__confirm">
@@ -56,8 +56,8 @@
               </li>
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Foie gras de canard mi-cuit</h3>
-                  <p>Et ses copaeaux de truffe noire</p>
+                  <h3>Bouchée de homard croustillant</h3>
+                  <p>Et sa farandole de petits légumes</p>
                 </div>
                 <span class="dish__price">35€</span>
                 <div class="dish__confirm">
@@ -66,8 +66,8 @@
               </li>
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Oeuf au plat</h3>
-                  <p>Assaisonné à la truffe sur lit de caviar</p>
+                  <h3>Velouté de cèpes</h3>
+                  <p>Aux truffes</p>
                 </div>
                 <span class="dish__price">20€</span>
                 <div class="dish__confirm">
@@ -81,8 +81,8 @@
             <ol class="container-dish__list">
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Filet de boeuf aux herbes</h3>
-                  <p>Accompagné de sa ribambelle de légumes</p>
+                  <h3>Poulet rôti aux herbes de Provence </h3>
+                  <p>Et sa crème de truffe</p>
                 </div>
                 <span class="dish__price">40€</span>
                 <div class="dish__confirm">
@@ -91,8 +91,8 @@
               </li>
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Parmentier de queue de boeuf</h3>
-                  <p>À la truffe noire sur sa purée de panais</p>
+                  <h3>Langouste rôtie</h3>
+                  <p>Et ses légumes de saison</p>
                 </div>
                 <span class="dish__price">35€</span>
                 <div class="dish__confirm">
@@ -101,8 +101,8 @@
               </li>
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Filet de turbot</h3>
-                  <p>Aux agrumes</p>
+                  <h3>Côte de boeuf Angus </h3>
+                  <p>Et sa purée de panais</p>
                 </div>
                 <span class="dish__price">44€</span>
                 <div class="dish__confirm">
@@ -116,8 +116,8 @@
             <ol class="container-dish__list">
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Paris-Brest</h3>
-                  <p>Revisité</p>
+                  <h3>Farandole de desserts</h3>
+                  <p>Du chef</p>
                 </div>
                 <span class="dish__price">18€</span>
                 <div class="dish__confirm">
@@ -126,8 +126,8 @@
               </li>
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Macaron au chocolat d'exception</h3>
-                  <p>Et glace à la vanille de Madagascar</p>
+                  <h3>Crème brulée</h3>
+                  <p>Revisitée</p>
                 </div>
                 <span class="dish__price">22€</span>
                 <div class="dish__confirm">
@@ -136,8 +136,8 @@
               </li>
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Mousse au chocolat</h3>
-                  <p>Au piment d'Espelette et à la truffe noire</p>
+                  <h3>Tiramisu</h3>
+                  <p>À la noisette</p>
                 </div>
                 <span class="dish__price">23€</span>
                 <div class="dish__confirm">
